--- a/index.html
+++ b/index.html
@@ -29,12 +29,38 @@
 
 					<h2>Sobre a universidade</h2>
 					<p>
-						Lorem <strong>ipsum dolor</strong> sit <em>amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
+<strong> 1. Missão e Visão </strong> </p>
+Missão: "Promover a excelência acadêmica, a pesquisa inovadora e a formação de cidadãos comprometidos com o desenvolvimento sustentável e a sociedade."
+Visão: "Ser uma instituição líder em educação superior, reconhecida nacional e internacionalmente pelo seu impacto na sociedade e contribuição para o conhecimento."</p>
+<p>
+	<strong> 2. Nossa História </strong> </p>
 
-					<p>
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-					</p>
+Fundada em 1960, a UNES tem uma longa tradição de oferecer educação de alta qualidade em diversas áreas do conhecimento.
+Ao longo dos anos, expandimos nossa oferta acadêmica, construímos uma infraestrutura moderna e desenvolvemos parcerias com instituições globais. </p>
+<p> <strong> 3. Estrutura e Camping </strong> </p>
+
+A UNES possui múltiplos campings equipados com laboratórios avançados, bibliotecas abrangentes e instalações esportivas de última geração.
+Oferecemos uma experiência acadêmica enriquecedora em um ambiente propício à aprendizagem e à interação.</p>
+<p><strong> 4.Cursos Oferecidos </strong> </p>
+
+Nossos cursos abrangem diversas áreas, incluindo ciências exatas, humanas, sociais, saúde e tecnologia.
+Temos programas de graduação, pós-graduação e cursos de extensão, todos desenvolvidos para atender às demandas do mercado e às necessidades da sociedade.</p>
+<strong> 5. Corpo Docente e Pesquisa </strong> </p>
+
+Contamos com um corpo docente altamente qualificado, composto por especialistas, pesquisadores e profissionais atuantes em suas respectivas áreas.
+Nossa universidade tem um histórico de pesquisa inovadora e contribuições significativas para o avanço do conhecimento.
+<p><strong> 6. Compromisso com a Sociedade </strong> </p>
+
+A UNES valoriza o engajamento com a comunidade. Realizamos projetos sociais, eventos culturais e parcerias com empresas locais para promover o desenvolvimento regional.</p>
+<p> <strong> 7. Internacionalização </strong> </p>
+
+Buscamos a internacionalização do ensino e da pesquisa, promovendo intercâmbio de estudantes, colaborações acadêmicas e participação em redes globais.</p>
+<p> <strong> 8. Sustentabilidade </strong> </p>
+
+Comprometidos com a sustentabilidade, implementamos práticas eco-friendly em nossos campi, além de abordar questões ambientais em nossos programas acadêmicos.</p>
+<strong> 9. Inovação e Tecnologia </strong> </p>
+<p>
+Estamos na vanguarda da educação, incorporando tecnologias inovadoras em nossos métodos de ensino e pesquisa para preparar os alunos para os desafios do futuro.</p>
 
 
 				</td>
