--- a/quem-somos.html
+++ b/quem-somos.html
@@ -21,7 +21,21 @@
 
 					<h2>Quem Somos</h2>
 					<p>
-						Lorem <strong>ipsum dolor</strong> sit <em>amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						A UNES (Universidade Estadual de Educação Superior) é uma instituição renomada de ensino superior dedicada à promoção da excelência acadêmica, pesquisa inovadora e formação de indivíduos comprometidos com o desenvolvimento sustentável e o progresso da sociedade. Fundada em 1960, a UNES construiu ao longo dos anos uma reputação sólida e uma tradição de oferecer educação de alta qualidade em diversas áreas do conhecimento.<p>
+
+Nossa universidade possui múltiplos campi, cada um deles equipado com instalações modernas, laboratórios de ponta, bibliotecas abrangentes e espaços esportivos para proporcionar aos estudantes um ambiente estimulante para aprendizado e interação. Com uma abordagem centrada no aluno, buscamos oferecer uma experiência acadêmica completa que prepare os estudantes para os desafios do mundo real.</p>
+
+Oferecemos uma ampla gama de cursos que abrangem desde as ciências exatas e humanas até as áreas de saúde, tecnologia e ciências sociais. Nossos programas acadêmicos incluem cursos de graduação, pós-graduação e também oportunidades de educação continuada por meio de cursos de extensão.
+
+O corpo docente da UNES é composto por professores altamente qualificados e especialistas em suas respectivas disciplinas. Além de oferecer educação de qualidade, nossa universidade também tem um histórico notável de pesquisa inovadora, contribuindo para o avanço do conhecimento e da sociedade como um todo.
+
+Nosso compromisso vai além das paredes da universidade.<p>Valorizamos o engajamento com a comunidade e buscamos promover o desenvolvimento regional por meio de projetos sociais, eventos culturais e parcerias com empresas locais. Além disso, a internacionalização é uma parte fundamental da nossa visão, promovendo a colaboração global por meio de intercâmbio de estudantes, cooperação acadêmica e participação em redes internacionais.
+
+A sustentabilidade também é uma preocupação central para nós.</p>Implementamos práticas eco-friendly em nossos campi e incorporamos questões ambientais em nossos programas acadêmicos, preparando os alunos para enfrentar os desafios da sustentabilidade no mundo contemporâneo.
+
+Na UNES, inovação e tecnologia são valorizadas e incorporadas aos nossos métodos de ensino e pesquisa. Buscamos constantemente maneiras de adotar novas abordagens educacionais e tecnologias emergentes para garantir que nossos alunos estejam bem preparados para um futuro em constante evolução.
+
+Se você está buscando uma instituição de ensino comprometida com a qualidade acadêmica, a pesquisa inovadora e a formação de líderes do futuro, a UNES é o lugar onde o conhecimento encontra o futuro.
 					</p>
 
 					<h2>5 motivos para estudar</h2>
@@ -39,7 +53,7 @@
 
 
 					<p>
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+						A UNES, Universidade Estadual de Educação Superior, tem como principais objetivos a promoção da excelência acadêmica, o estímulo à pesquisa inovadora e a formação de cidadãos comprometidos com o desenvolvimento sustentável e a contribuição para a sociedade. A instituição busca não apenas fornecer educação de alta qualidade, mas também incentivar a participação em projetos de pesquisa que avancem o conhecimento. Além disso, a UNES tem um forte foco na responsabilidade social, buscando contribuir para o desenvolvimento regional por meio de projetos sociais e parcerias com a comunidade. A universidade tem como objetivo formar cidadãos conscientes, éticos e engajados, preparando-os não apenas para o sucesso profissional, mas também para serem agentes de mudança positiva. A internacionalização, a sustentabilidade e a inovação educacional também estão entre os princípios orientadores da UNES, visando a preparação dos alunos para um mundo globalizado e em constante evolução.
 					</p>
 
 
